# avatar-rs

./: Cargo.toml  README.md
benches/: benchmark.rs  draw_benchmark.rs  gen_benchmark.rs  icon_benchmark.rs  mask_benchmark.rs
src/: lib.rs  main.rs
