[package]
name = "avatar-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "avatar_rs"

[dependencies]
image = { version = "0.25.5", features = ["rayon"] }
rand = "0.9.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "icon_benchmark"
harness = false

[[bench]]
name = "mask_benchmark"
harness = false
